2020-08-28 belangeo <belangeo@gmail.com>

    * Git tag: 1.0.3.

2020-08-28 belangeo <belangeo@gmail.com>

    * Fixed missing lib dependency links on MacOS.

2020-08-17 belangeo <belangeo@gmail.com>

    * Git tag: 1.0.2.

2020-08-02 belangeo <belangeo@gmail.com>

    * Added new object: MML, Music Macro Language evaluator.

2020-06-27 belangeo <belangeo@gmail.com>

    * Fixed segfault in reducePoints function.

2020-06-27 belangeo <belangeo@gmail.com>

    * Fixed Linseg when time difference between two points is less than 1 sample.

2020-02-10 belangeo <belangeo@gmail.com>

    * Added new object: TriangleTable.

2020-01-20 belangeo <belangeo@gmail.com>

    * Added new object: IFFTMatrix, Inverse Fast Fourier Transform with a PyoMatrixObject as input.

2020-01-07 belangeo <belangeo@gmail.com>

    * PVBuffer's length attribute can now be changed dynamically.

2019-11-27 belangeo <belangeo@gmail.com>

    * Git tag: 1.0.1.

2019-11-24 belangeo <belangeo@gmail.com>

    * Added beatToDur(beat, bpm) function.

2019-11-15 belangeo <belangeo@gmail.com>

    * Added examples about how to use OSC protocol with pyo.

2019-11-12 belangeo <belangeo@gmail.com>

    * Added utilities examples.

2019-11-11 belangeo <belangeo@gmail.com>

    * Added events examples.

2019-11-05 belangeo <belangeo@gmail.com>

    * Added the first version of the Events framework.

2019-10-22 belangeo <belangeo@gmail.com>

    * Fixed tkinter font size on MacOS (fixed issue #163).

2019-10-14 belangeo <belangeo@gmail.com>

    * Added setChannelNames(names) method to Spectrum and Scope objects.

2019-10-10 belangeo <belangeo@gmail.com>

    * Fixed segfault when CallAfter's callback results in deleting itself
      (its stop method was then called on a deallocated object).

2019-09-30 belangeo <belangeo@gmail.com>

    * Expr API: constants (pi, twopi, e, sr) can be used without braces.

2019-09-29 belangeo <belangeo@gmail.com>

    * Expr API: Expr now can generate multiple output signals.
