@@ -1,3 +1,7 @@
+2020-11-12 belangeo <belangeo@gmail.com>
+
+    * Added PyoObjectBase.getStopDelay() method (mainly for unit testing).
+
 2020-08-28 belangeo <belangeo@gmail.com>
 
     * Git tag: 1.0.3.
